# hypermodern-python-test

./: README.md  noxfile.py  pyproject.toml
src/hypermodern-python-test/: console.py
src/hypermodern_python_test/: __init__.py  console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
