[tool.poetry]
name = "hypermodern-python-test"
version = "0.1.0"
description = 'The hypermodern Python project test'
authors = ["Juan I. Carlis <jicarlis@ad-cap.com.ar>"]
license = 'MIT'
readme = 'README.md'
homepage = 'https://github.com/juancarlis/hypermodern-python-test'
repository = 'https://github.com/juancarlis/hypermodern-python-test'
keywords = ['hypermodern', 'python']

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python-test = 'hypermodern_python_test.console:main'
